<resources>
    <string name="app_name">Tip Calculator ds</string>
    <string name="summary">Summary</string>
    <string name="summary_subtitle">See bellow the summary of your bill</string>
    <string name="total_table">Total Table</string>
    <string name="number_people">Number of People</string>
    <string name="percentage">Percentage</string>
    <string name="total">TOTAL</string>
    <string name="refresh">Refresh</string>
    <string name="tips_calculator">Tips Calculator</string>
    <string name="main_subtitle">Fulfill the bellow fields</string>
    <string name="table_amount_lable">Type the table amount:</string>
    <string name="table_amount_hint">ex: $ 100.00</string>
    <string name="number_people_lable">Number of People:</string>
    <string name="percentage_lable">Tips percentage:</string>
    <string name="percentage_hint">ex: 10%</string>
    <string name="clean_btn">Clean</string>
    <string name="calculate_btn">Calculate</string>

</resources>