<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tips_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/main_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_hint_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/table_amount_lable"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <TextView
        android:id="@+id/tv_hint_number_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_people_lable"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/til_total" />

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/percentage_lable"
        app:layout_constraintStart_toStartOf="@+id/til_number_of_people"
        app:layout_constraintTop_toBottomOf="@+id/til_number_of_people" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_total_table"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_total_table">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/table_amount_hint"
            android:inputType="numberDecimal"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_number_of_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_number_people">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_number_of_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ex: 4"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/til_number_of_people"
        app:layout_constraintStart_toStartOf="@+id/til_number_of_people"
        app:layout_constraintTop_toBottomOf="@+id/tv_percentage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/percentage_hint"
            android:inputType="number"
            android:maxLength="3"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clean"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/clean_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/calculate_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>